--- a/Views/Club/Clubs.cshtml
+++ b/Views/Club/Clubs.cshtml
@@ -1,7 +1,4 @@
 ﻿@model IEnumerable<FutManager.Models.Club>
-@{
-    List<Club> listClubs = ViewBag.Clubs;
-}
 <p>
     <a asp-action="Create">Create New</a>
 </p>
@@ -24,7 +21,7 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in listClubs) {
+@foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Id)
