--- a/Views/Player/Create.cshtml
+++ b/Views/Player/Create.cshtml
@@ -1,19 +1,23 @@
 ﻿@model FutManager.Models.Player
+@{
+    List<Nation> Nations = ViewBag.Nationions;
+    List<Club> Clubs = ViewBag.Clubs;
+}
 
 <h4>Player</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Index">
+        <form asp-action="Add">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FisrtName" class="control-label"></label>
-                <input asp-for="FisrtName" class="form-control" />
+                <input asp-for="FisrtName" class="form-control" name="first_name"/>
                 <span asp-validation-for="FisrtName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
+                <input asp-for="LastName" class="form-control" name="last_name"/>
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -28,13 +32,35 @@
                 <span asp-validation-for="Position" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="NationalityId" class="control-label"></label>
+                <select asp-for="NationalityId" class="form-control">
+                    <option value="" selected disabled hidden>Choose here</option>
+                    @foreach(var item in Nations)
+                    {
+                        <option value="@item.Id">@item.Name</option>
+                    }
+                </select>
+                <span asp-validation-for="NationalityId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ClubId" class="control-label"></label>
+                <select asp-for="ClubId" class="form-control">
+                    <option value="" selected disabled hidden>Choose here</option>
+                    @foreach(var item in Clubs)
+                    {
+                        <option value="@item.Id">@item.Name</option>
+                    }
+                </select>
+                <span asp-validation-for="ClubId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Age" class="control-label"></label>
                 <input asp-for="Age" class="form-control" />
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ShirtNumber" class="control-label"></label>
-                <input asp-for="ShirtNumber" class="form-control" />
+                <input asp-for="ShirtNumber" class="form-control" name="shirtnumber" />
                 <span asp-validation-for="ShirtNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
