--- a/Views/Manager/Create.cshtml
+++ b/Views/Manager/Create.cshtml
@@ -1,8 +1,5 @@
-﻿@model FutManager.Models.Manager
-@{
-    List<Nation> Nations = ViewBag.Nationions;
-    List<Club> Clubs = ViewBag.Clubs;
-}
+﻿@model FutManager.Data.ManagerAndClubsAndNations
+
 <h4>Manager</h4>
 <hr />
 <div class="row">
@@ -12,24 +9,24 @@
             <div class="form-group">
                
                 <label asp-for="FisrtName" class="control-label"></label>
-                <input asp-for="FisrtName" class="form-control" name="first_name"/>
+                <input class="form-control" name="first_name"/>
                 <span asp-validation-for="FisrtName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" name="last_name" />
+                <input class="form-control" name="last_name"/>
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Age" class="control-label"></label>
-                <input asp-for="Age" class="form-control"  />
+                <input class="form-control" name="age" />
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="NationalityId" class="control-label"></label>
-                <select asp-for="NationalityId" class="form-control">
+                <select class="form-control" name="nationalityId">
                     <option value="" selected disabled hidden>Choose here</option>
-                    @foreach(var item in Nations)
+                    @foreach(var item in Model.Nations)
                     {
                         <option value="@item.Id">@item.Name</option>
                     }
@@ -38,9 +35,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="ClubId" class="control-label"></label>
-                 <select asp-for="ClubId" class="form-control">
+                 <select class="form-control" name="clubId">
                     <option value="" selected disabled hidden>Choose here</option>
-                    @foreach(var item in Clubs)
+                    @foreach(var item in Model.Clubs)
                     {
                         <option value="@item.Id">@item.Name</option>
                     }
@@ -49,7 +46,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Rating" class="control-label"></label>
-                <input asp-for="Rating" class="form-control" />
+                <input class="form-control" name="rating" />
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
