fully implemented crud for player

--- a/Views/Manager/Index.cshtml
+++ b/Views/Manager/Index.cshtml
@@ -61,9 +61,9 @@
                 @Html.DisplayFor(modelItem => item.isReal)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Edit", "Edit", new { item.Id }) |
                 @Html.ActionLink("Details", "Details", new { item.Id },null) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Delete", "Delete", new { item.Id })
             </td>
         </tr>
 }
