CRUD for manager

--- a/Views/Manager/Delete.cshtml
+++ b/Views/Manager/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model FutManager.Models.Player
+﻿@model FutManager.Models.Manager
 <h4>Are you sure you want to delete @Model.FisrtName @Model.LastName?</h4>
 <hr />
 <div class="row">
