--- a/Views/Player/Edit.cshtml
+++ b/Views/Player/Edit.cshtml
@@ -69,7 +69,16 @@
                     <input class="form-check-input" asp-for="player.isReal" name="isReal"/> @Html.DisplayNameFor(model => model.player.isReal)
                 </label>
             </div>
-            <input type="hidden" value = @Model.player.Id name="id">
+            <<div class="form-group">
+                <div>
+                    <label class="control-label">Password</label>
+                </div>
+                <div >
+                    <input class="form-control" type="password" name="password" />
+                </div>
+                <input type="hidden" value = @Model.player.Id name="id">
+                <span class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
