small changes to drafts

--- a/Views/Player/Edit.cshtml
+++ b/Views/Player/Edit.cshtml
@@ -69,7 +69,7 @@
                     <input class="form-check-input" asp-for="player.isReal" name="isReal"/> @Html.DisplayNameFor(model => model.player.isReal)
                 </label>
             </div>
-            <<div class="form-group">
+            <div class="form-group">
                 <div>
                     <label class="control-label">Password</label>
                 </div>
