--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
                           <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Nation" asp-action="Index">Nations</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Draft" asp-action="Index">Drafts</a>
+                        </li>
                     </ul>
                 </div>
             </div>
