--- a/Views/Draft/Create.cshtml
+++ b/Views/Draft/Create.cshtml
@@ -87,6 +87,16 @@
                 </select>
             </div>
             <div class="form-group">
+                <label name="Managers" class="control-label">Managers</label>
+                <select class="form-control" name="ManagerId">
+                    <option value="" selected disabled hidden>Choose here</option>
+                    <option value="@Model.Managers[0].Id">@Model.Managers[0].FisrtName @Model.Managers[0].LastName</option>
+                    <option value="@Model.Managers[1].Id">@Model.Managers[1].FisrtName @Model.Managers[1].LastName</option>
+                    <option value="@Model.Managers[2].Id">@Model.Managers[2].FisrtName @Model.Managers[2].LastName</option> 
+                    <option value="@Model.Managers[3].Id">@Model.Managers[3].FisrtName @Model.Managers[3].LastName</option> 
+                </select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
