details for draft

--- a/Views/Draft/Index.cshtml
+++ b/Views/Draft/Index.cshtml
@@ -74,7 +74,7 @@
             </td>
             <td>
                 @Html.ActionLink("Details", "Details", new { item.Id}) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Delete", "Delete", new { item.Id })
             </td>
         </tr>
 }
